Use limit string
